syntax = "proto3";

message CommandDm {
  int64 id = 1;        //弹幕dmid
  int64 oid = 2;       //视频cid
  int64 mid = 3;       //发送者mid
  string command = 4;  //弹幕指令
  string content = 5;  //弹幕文字
  int32 progress = 6;  //弹幕出现时间
  string ctime = 7;    //
  string mtime = 8;    //
  string extra = 9;    //弹幕负载数据
  string idStr = 10;   //弹幕dmid（字串形式）
}

message DmView {
  repeated CommandDm commandDms = 1;
}

message DmViewReply {
  DmView dmView = 22;
}
