syntax = "proto3";

enum DynamicType {
  dyn_none = 0;          // 占位
  forward = 1;           // 转发
  av = 2;                // 稿件: ugc、小视频、短视频、UGC转PGC
  pgc = 3;               // pgc：番剧、PGC番剧、PGC电影、PGC电视剧、PGC国创、PGC纪录片
  courses = 4;           // 付费更新批次
  fold = 5;              // 折叠
  word = 6;              // 纯文字
  draw = 7;              // 图文
  article = 8;           // 专栏 原仅phone端
  music = 9;             // 音频 原仅phone端
  common_square = 10;    // 通用卡 方形
  common_vertical = 11;  // 通用卡 竖形
  live = 12;             // 直播卡 只有转发态
  medialist = 13;        // 播单 原仅phone端 只有转发态
  courses_season = 14;   // 付费更新批次 只有转发态
  ad = 15;               // 广告卡
  applet = 16;           // 小程序卡
  subscription = 17;     // 订阅卡
  live_rcmd = 18;        // 直播推荐卡
  banner = 19;           // 通栏
  ugc_season = 20;       // 合集卡
  subscription_new = 21; // 新订阅卡
  story = 22;            //
  topic_rcmd = 23;       //
}

message DynamicItem {
  // 动态卡片类型
  DynamicType card_type = 1;
  // 转发类型下，源卡片类型
  DynamicType item_type = 2;
  // 该卡片下面是否含有折叠卡
  int32 has_fold = 5;
  // 透传到客户端的埋点字段。
  string server_info = 6;
}

message DynamicList {
  // 动态列表
  repeated DynamicItem list = 1;
  // 更新的动态数
  int64 update_num = 2;
  // 历史偏移
  string history_offset = 3;
  // 更新基础信息
  string update_baseline = 4;
  // 是否还有更多数据
  bool has_more = 5;
}

message TopicList {
  // 模块标题
  string title = 1;
}
// 动态综合页-响应
message DynAllReply {
  // 卡片列表
  DynamicList dynamic_list = 1;
  // 话题广场
  TopicList topic_list = 3;
}
