syntax = "proto3";

import "google/protobuf/any.proto";

// 广告
message CM {
  // 广告数据(需解包)
  google.protobuf.Any source_content = 1;
}

// 广告配置
message CMConfig {
  // 广告配置数据(需要二次解包)
  google.protobuf.Any ads_control = 1;
}

//
message CmIpad {
  //
  CM cm = 1;
  //
  int64 duration = 4;
  //
  int64 aid = 5;
}

// 相关推荐项
//message Relate {string uri = 9;}

// 视频页信息-响应
message ViewReply {
//  repeated Relate relates = 10;
  // 广告
  repeated CM cms = 30;
  // 广告配置
  CMConfig cm_config = 31;
  // 播放页定制tab
  CmIpad cm_ipad = 41;
}
