syntax = "proto3";

package viewunite.v1;

import "google/protobuf/any.proto";

enum TabType {
  //
  TAB_NONE = 0;
  // 详情 Tab
  TAB_INTRODUCTION = 1;
  // 评论区 Tab
  TAB_REPLY = 2;
  // OGV 活动信息 Tab
  TAB_OGV_ACTIVITY = 3;
}

enum ModuleType {
  //
  UNKNOWN = 0;
  //
  OGV_INTRODUCTION = 1;
  //
  OGV_TITLE = 2;
  //
  UGC_HEADLINE = 3;
  //
  UGC_INTRODUCTION = 4;
  //
  KING_POSITION = 5;
  //
  MASTER_USER_LIST = 6;
  //
  STAFFS = 7;
  //
  HONOR = 8;
  //
  OWNER = 9;
  //
  PAGE = 10;
  //
  ACTIVITY_RESERVE = 11;
  //
  LIVE_ORDER = 12;
  //
  POSITIVE = 13;
  //
  SECTION = 14;
  //
  RELATE = 15;
  //
  PUGV = 16;
  //
  COLLECTION_CARD = 17;
  //
  ACTIVITY = 18;
  //
  CHARACTER = 19;
  //
  FOLLOW_LAYER = 20;
  //
  OGV_SEASONS = 21;
  //
  UGC_SEASON = 22;
  //
  OGV_LIVE_RESERVE = 23;
  //
  COMBINATION_EPISODE = 24;
  //
  SPONSOR = 25;
  //
  ACTIVITY_ENTRANCE = 26;
  //
  THEATRE_HOT_TOPIC = 27;
  //
  RELATED_RECOMMEND = 28;
  //
  PAY_BAR = 29;
  //
  BANNER = 30;
  //
  AUDIO = 31;
  //
  AGG_CARD = 32;
  //
  SINGLE_EP = 33;
  //
  LIKE_COMMENT = 34;
  //
  ATTENTION_RECOMMEND = 35;
  //
  COVENANTER = 36;
}

enum RelateCardType {
  //
  CARD_TYPE_UNKNOWN = 0;
  //
  AV = 1;
  //
  BANGUMI = 2;
  //
  RESOURCE = 3;
  //
  GAME = 4;
  //
  CM_TYPE = 5;
  //
  LIVE = 6;
  //
  AI_RECOMMEND = 7;
  //
  BANGUMI_AV = 8;
  //
  BANGUMI_UGC = 9;
  //
  SPECIAL = 10;
}

message RelateCard {
  RelateCardType relate_card_type = 1;
}
message Relates { repeated RelateCard cards = 1; }

message CommonModule {
  ModuleType type = 1;
  oneof data { Relates relates = 22; }
}

message IntroductionTab {
  string title = 1;
  repeated CommonModule modules = 2;
}

message TabModule {
  TabType tab_type = 1;
  oneof tab { IntroductionTab introduction = 2; }
}

message Tab { repeated TabModule tab_module = 1; }

message CM {
  google.protobuf.Any cm_under_player = 1;
  google.protobuf.Any ads_control = 2;
  repeated google.protobuf.Any source_content = 3;
}

message ViewUniteReply {
  Tab tab = 5;
  CM cm = 7;
}
